tests/macro-tests/tests/expand/fail/non_existent_macro.err.txt
error: cannot find macro `non_existent_macro` in this scope
 --> /tests/expand/fail/non_existent_macro.rs:2:5
  |
2 |     non_existent_macro!();
  |     ^^^^^^^^^^^^^^^^^^
